--- a/main/templates/vision-dialog.chat.html
+++ b/main/templates/vision-dialog.chat.html
@@ -309,7 +309,7 @@
             <div class="bg-header blue lighten-5">
           {% endif %}
               Welcome
-              <b>{{username}}</b>! You will play the role of <b>{{role_name}}</b> in <b>{{mode}}</b>. <b>Now chat!</b>
+              <b>{{username}}</b>! You will play the role of <b>{{role_name}}</b> in <b>{{mode}}</b> mode.
               <div>
                 Click <button class="btn red lighten-1" id="end_task" href="#" onclick="end_task();" value="">submit</button> when the task is completed.
               </div>
