--- a/main/templates/vision-dialog.chat.html
+++ b/main/templates/vision-dialog.chat.html
@@ -338,7 +338,7 @@
                   </div>
       {% endif %}
       {% if role == "user" %}
-              <div class="center-align"><p>coco image with annotation:</p>
+              <div class="center-align"><p>Image Layout Reference</p>
                   <canvas id="coco_image_anno"></canvas>
               </div>
       {% endif %}
