--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -23,8 +23,8 @@
       </div>
         <blockquote>
           Please fill the form below and click "start" to move on to the next step.<br>
-          If this is your first time doing this task, there will be a simple quiz. <br>
-          Once you pass the quiz, you will enter the conversation. <br>
+{#          If this is your first time doing this task, there will be a simple quiz. <br>#}
+{#          Once you pass the quiz, you will enter the conversation. <br>#}
           Have fun contributing!
         </blockquote>
 
