--- a/main/templates/vision-dialog.chat.html
+++ b/main/templates/vision-dialog.chat.html
@@ -154,6 +154,10 @@
         {% if role == "agent" %}
                   <div class="center-align">
                       <p>Drag and draw in the canvas:</p>
+		      <div class="fa fa-times-circle"> :Delete &nbsp; &nbsp; </div>
+		      <div class="fa fa-plus-circle"> :Move &nbsp;  &nbsp; </div>
+		      <div class="fa "> &#8689 &#8690: Resize </div>
+	              <p></p>
                       <div id="bbox_annotator"></div>
                   </div>
       {% endif %}
