update index page UI

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -22,7 +22,8 @@
         {% endif %}
       </div>
         <blockquote>
-          Please fill the form below and click "start" to move on to the next step.<br>
+          Please fill the form below.<br>
+          {#Please fill the form below and click "start" to move on to the next step.<br>#}
 {#          If this is your first time doing this task, there will be a simple quiz. <br>#}
 {#          Once you pass the quiz, you will enter the conversation. <br>#}
           Have fun contributing!
